--- a/src/pages/bucket-list.astro
+++ b/src/pages/bucket-list.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import HomeContent from '../../content/home.md';
+import Bucket from '../../content/bucket-list.md';
 ---
 
 <Layout>
   <article>
-    <HomeContent />
+    <Bucket />
   </article>
 </Layout>
