--- a/src/pages/goals.astro
+++ b/src/pages/goals.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import HomeContent from '../../content/home.md';
+import Goals from '../../content/goals.md';
 ---
 
 <Layout>
   <article>
-    <HomeContent />
+    <Goals />
   </article>
 </Layout>
