--- a/src/pages/ideas.astro
+++ b/src/pages/ideas.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import HomeContent from '../../content/home.md';
+import Ideas from '../../content/ideas.md';
 ---
 
 <Layout>
   <article>
-    <HomeContent />
+    <Ideas />
   </article>
 </Layout>
