--- a/src/pages/manutencao.astro
+++ b/src/pages/manutencao.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import HomeContent from '../../content/home.md';
+import Manu from '../../content/manutencao.md';
 ---
 
 <Layout>
   <article>
-    <HomeContent />
+    <Manu />
   </article>
 </Layout>
