--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import HomeContent from '../../content/home.md';
+import Tracker from '../../content/tracker.md';
 ---
 
 <Layout>
   <article>
-    <HomeContent />
+    <Tracker />
   </article>
 </Layout>
