Ajustes no layout

--- a/src/pages/bucket-list.astro
+++ b/src/pages/bucket-list.astro
@@ -1,10 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Bucket from '../../content/bucket-list.md';
+import Layout from "../layouts/Layout.astro";
+import Bucket from "../../content/bucket-list.md";
 ---
 
 <Layout>
-  <article>
-    <Bucket />
-  </article>
+  <Bucket />
 </Layout>
