--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Tracker from '../../content/tracker.md';
+import Layout from "../layouts/Layout.astro";
+import Tracker from "../../content/tracker.md";
 ---
 
 <Layout>
-  <article>
-    <Tracker />
-  </article>
+  <Tracker />
 </Layout>
