--- a/src/pages/goals.astro
+++ b/src/pages/goals.astro
@@ -1,10 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Goals from '../../content/goals.md';
+import Layout from "../layouts/Layout.astro";
+import Goals from "../../content/goals.md";
 ---
 
 <Layout>
-  <article>
-    <Goals />
-  </article>
+  <Goals />
 </Layout>
